Fix notebook startup and speed up Bellman inner loop

--- a/notebooks/ps1_main.ipynb
+++ b/notebooks/ps1_main.ipynb
@@ -16,11 +16,24 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\\n",
+    "import importlib.util\\n",
     "import sys\\n",
     "\\n",
-    "candidates = [Path.cwd(), Path.cwd().parent]\\n",
-    "project_root = next((p for p in candidates if (p / \"src\").exists()), Path.cwd())\\n",
+    "def find_project_root(start: Path) -> Path:\\n",
+    "    for p in [start, *start.parents]:\\n",
+    "        if (p / \"src\" / \"arellano_ps1\").exists():\\n",
+    "            return p\\n",
+    "    raise FileNotFoundError(\"Could not find project root containing src/arellano_ps1.\")\\n",
+    "\\n",
+    "project_root = find_project_root(Path.cwd())\\n",
     "sys.path.insert(0, str(project_root / \"src\"))\\n",
+    "\\n",
+    "missing = [pkg for pkg in (\"numpy\", \"matplotlib\") if importlib.util.find_spec(pkg) is None]\\n",
+    "if missing:\\n",
+    "    req = project_root / \"requirements.txt\"\\n",
+    "    raise ModuleNotFoundError(\\n",
+    "        f\"Missing packages: {missing}. Install with: pip install -r {req}\"\\n",
+    "    )\\n",
     "\\n",
     "from arellano_ps1 import ModelConfig, create_assignment_figures, run_model"
    ]
@@ -43,11 +56,11 @@
     "    n_y=7,\\n",
     "    b_max=50.0,\\n",
     "    nu=1.0,\\n",
-    "    max_inner_iter=5000,\\n",
-    "    max_outer_iter=5000,\\n",
-    "    inner_tol=1e-7,\\n",
-    "    outer_tol=1e-7,\\n",
-    "    q_relax=1.0,\\n",
+    "    max_inner_iter=2000,\\n",
+    "    max_outer_iter=1000,\\n",
+    "    inner_tol=1e-6,\\n",
+    "    outer_tol=1e-6,\\n",
+    "    q_relax=0.9,\\n",
     ")\\n",
     "config"
    ]
