Fix literal \\n escapes in notebook cell sources

--- a/notebooks/ps1_main.ipynb
+++ b/notebooks/ps1_main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ECON 743 - PS1 (Python)\\n",
-    "\\n",
+    "# ECON 743 - PS1 (Python)\n",
+    "\n",
     "Main notebook to solve the Arellano-style sovereign default model and generate all required figures."
    ]
   },
@@ -15,26 +15,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\\n",
-    "import importlib.util\\n",
-    "import sys\\n",
-    "\\n",
-    "def find_project_root(start: Path) -> Path:\\n",
-    "    for p in [start, *start.parents]:\\n",
-    "        if (p / \"src\" / \"arellano_ps1\").exists():\\n",
-    "            return p\\n",
-    "    raise FileNotFoundError(\"Could not find project root containing src/arellano_ps1.\")\\n",
-    "\\n",
-    "project_root = find_project_root(Path.cwd())\\n",
-    "sys.path.insert(0, str(project_root / \"src\"))\\n",
-    "\\n",
-    "missing = [pkg for pkg in (\"numpy\", \"matplotlib\") if importlib.util.find_spec(pkg) is None]\\n",
-    "if missing:\\n",
-    "    req = project_root / \"requirements.txt\"\\n",
-    "    raise ModuleNotFoundError(\\n",
-    "        f\"Missing packages: {missing}. Install with: pip install -r {req}\"\\n",
-    "    )\\n",
-    "\\n",
+    "from pathlib import Path\n",
+    "import importlib.util\n",
+    "import sys\n",
+    "\n",
+    "def find_project_root(start: Path) -> Path:\n",
+    "    for p in [start, *start.parents]:\n",
+    "        if (p / \"src\" / \"arellano_ps1\").exists():\n",
+    "            return p\n",
+    "    raise FileNotFoundError(\"Could not find project root containing src/arellano_ps1.\")\n",
+    "\n",
+    "project_root = find_project_root(Path.cwd())\n",
+    "sys.path.insert(0, str(project_root / \"src\"))\n",
+    "\n",
+    "missing = [pkg for pkg in (\"numpy\", \"matplotlib\") if importlib.util.find_spec(pkg) is None]\n",
+    "if missing:\n",
+    "    req = project_root / \"requirements.txt\"\n",
+    "    raise ModuleNotFoundError(\n",
+    "        f\"Missing packages: {missing}. Install with: pip install -r {req}\"\n",
+    "    )\n",
+    "\n",
     "from arellano_ps1 import ModelConfig, create_assignment_figures, run_model"
    ]
   },
@@ -44,24 +44,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Baseline assignment parameters\\n",
-    "config = ModelConfig(\\n",
-    "    beta=0.95,\\n",
-    "    rho=0.94,\\n",
-    "    sigma_z=0.03,\\n",
-    "    r=0.02,\\n",
-    "    y_default=0.8,\\n",
-    "    theta=0.0,\\n",
-    "    n_b=400,\\n",
-    "    n_y=7,\\n",
-    "    b_max=50.0,\\n",
-    "    nu=1.0,\\n",
-    "    max_inner_iter=2000,\\n",
-    "    max_outer_iter=1000,\\n",
-    "    inner_tol=1e-6,\\n",
-    "    outer_tol=1e-6,\\n",
-    "    q_relax=0.9,\\n",
-    ")\\n",
+    "# Baseline assignment parameters\n",
+    "config = ModelConfig(\n",
+    "    beta=0.95,\n",
+    "    rho=0.94,\n",
+    "    sigma_z=0.03,\n",
+    "    r=0.02,\n",
+    "    y_default=0.8,\n",
+    "    theta=0.0,\n",
+    "    n_b=400,\n",
+    "    n_y=7,\n",
+    "    b_max=50.0,\n",
+    "    nu=1.0,\n",
+    "    max_inner_iter=2000,\n",
+    "    max_outer_iter=1000,\n",
+    "    inner_tol=1e-6,\n",
+    "    outer_tol=1e-6,\n",
+    "    q_relax=0.9,\n",
+    ")\n",
     "config"
    ]
   },
@@ -71,12 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = run_model(config)\\n",
-    "solution = result.solution\\n",
-    "\\n",
-    "print(f\"Converged: {solution.converged}\")\\n",
-    "print(f\"Outer iterations: {solution.outer_iterations}\")\\n",
-    "print(f\"Inner iterations (last outer step): {solution.inner_iterations}\")\\n",
+    "result = run_model(config)\n",
+    "solution = result.solution\n",
+    "\n",
+    "print(f\"Converged: {solution.converged}\")\n",
+    "print(f\"Outer iterations: {solution.outer_iterations}\")\n",
+    "print(f\"Inner iterations (last outer step): {solution.inner_iterations}\")\n",
     "print(f\"Natural borrowing limit B_min: {result.b_min:.6f}\")"
    ]
   },
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_dir = project_root / \"outputs\" / \"figures\"\\n",
-    "create_assignment_figures(result, fig_dir)\\n",
+    "fig_dir = project_root / \"outputs\" / \"figures\"\n",
+    "create_assignment_figures(result, fig_dir)\n",
     "print(f\"Saved figures to: {fig_dir}\")"
    ]
   },
@@ -104,8 +104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discussion Notes\\n",
-    "\\n",
+    "## Discussion Notes\n",
+    "\n",
     "- Fill in your intuition for the three figures here before submission."
    ]
   }
