Normalize notebook source strings to remove escaped newline artifacts

--- a/notebooks/ps1_main.ipynb
+++ b/notebooks/ps1_main.ipynb
@@ -3,122 +3,60 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# ECON 743 - PS1 (Python)\n",
-    "\n",
-    "Main notebook to solve the Arellano-style sovereign default model and generate all required figures."
-   ]
+   "source": "# ECON 743 - PS1 (Python)\n\n\n\nMain notebook to solve the Arellano-style sovereign default model and generate all required figures."
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02633aab",
+   "metadata": {},
+   "outputs": [],
+   "source": "from pathlib import Path\n\nimport importlib.util\n\nimport sys\n\n\n\ndef find_project_root(start: Path) -> Path:\n\n    for p in [start, *start.parents]:\n\n        if (p / \"src\" / \"arellano_ps1\").exists():\n\n            return p\n\n    raise FileNotFoundError(\"Could not find project root containing src/arellano_ps1.\")\n\n\n\nproject_root = find_project_root(Path.cwd())\n\nsys.path.insert(0, str(project_root / \"src\"))\n\n\n\nmissing = [pkg for pkg in (\"numpy\", \"matplotlib\") if importlib.util.find_spec(pkg) is None]\n\nif missing:\n\n    req = project_root / \"requirements.txt\"\n\n    raise ModuleNotFoundError(\n\n        f\"Missing packages: {missing}. Install with: pip install -r {req}\"\n\n    )\n\n\n\nfrom arellano_ps1 import ModelConfig, create_assignment_figures, run_model"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f430f7bc",
+   "metadata": {},
+   "outputs": [],
+   "source": "# Baseline assignment parameters\n\nconfig = ModelConfig(\n\n    beta=0.95,\n\n    rho=0.94,\n\n    sigma_z=0.03,\n\n    r=0.02,\n\n    y_default=0.8,\n\n    theta=0.0,\n\n    n_b=400,\n\n    n_y=7,\n\n    b_max=50.0,\n\n    nu=1.0,\n\n    max_inner_iter=2000,\n\n    max_outer_iter=1000,\n\n    inner_tol=1e-6,\n\n    outer_tol=1e-6,\n\n    q_relax=0.9,\n\n)\n\nconfig"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import importlib.util\n",
-    "import sys\n",
-    "\n",
-    "def find_project_root(start: Path) -> Path:\n",
-    "    for p in [start, *start.parents]:\n",
-    "        if (p / \"src\" / \"arellano_ps1\").exists():\n",
-    "            return p\n",
-    "    raise FileNotFoundError(\"Could not find project root containing src/arellano_ps1.\")\n",
-    "\n",
-    "project_root = find_project_root(Path.cwd())\n",
-    "sys.path.insert(0, str(project_root / \"src\"))\n",
-    "\n",
-    "missing = [pkg for pkg in (\"numpy\", \"matplotlib\") if importlib.util.find_spec(pkg) is None]\n",
-    "if missing:\n",
-    "    req = project_root / \"requirements.txt\"\n",
-    "    raise ModuleNotFoundError(\n",
-    "        f\"Missing packages: {missing}. Install with: pip install -r {req}\"\n",
-    "    )\n",
-    "\n",
-    "from arellano_ps1 import ModelConfig, create_assignment_figures, run_model"
-   ]
+   "source": "result = run_model(config)\n\nsolution = result.solution\n\n\n\nprint(f\"Converged: {solution.converged}\")\n\nprint(f\"Outer iterations: {solution.outer_iterations}\")\n\nprint(f\"Inner iterations (last outer step): {solution.inner_iterations}\")\n\nprint(f\"Natural borrowing limit B_min: {result.b_min:.6f}\")"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Baseline assignment parameters\n",
-    "config = ModelConfig(\n",
-    "    beta=0.95,\n",
-    "    rho=0.94,\n",
-    "    sigma_z=0.03,\n",
-    "    r=0.02,\n",
-    "    y_default=0.8,\n",
-    "    theta=0.0,\n",
-    "    n_b=400,\n",
-    "    n_y=7,\n",
-    "    b_max=50.0,\n",
-    "    nu=1.0,\n",
-    "    max_inner_iter=2000,\n",
-    "    max_outer_iter=1000,\n",
-    "    inner_tol=1e-6,\n",
-    "    outer_tol=1e-6,\n",
-    "    q_relax=0.9,\n",
-    ")\n",
-    "config"
-   ]
+   "source": "result.diagnostics"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result = run_model(config)\n",
-    "solution = result.solution\n",
-    "\n",
-    "print(f\"Converged: {solution.converged}\")\n",
-    "print(f\"Outer iterations: {solution.outer_iterations}\")\n",
-    "print(f\"Inner iterations (last outer step): {solution.inner_iterations}\")\n",
-    "print(f\"Natural borrowing limit B_min: {result.b_min:.6f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result.diagnostics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig_dir = project_root / \"outputs\" / \"figures\"\n",
-    "create_assignment_figures(result, fig_dir)\n",
-    "print(f\"Saved figures to: {fig_dir}\")"
-   ]
+   "source": "fig_dir = project_root / \"outputs\" / \"figures\"\n\ncreate_assignment_figures(result, fig_dir)\n\nprint(f\"Saved figures to: {fig_dir}\")"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Discussion Notes\n",
-    "\n",
-    "- Fill in your intuition for the three figures here before submission."
-   ]
+   "source": "## Discussion Notes\n\n\n\n- Fill in your intuition for the three figures here before submission."
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "econ",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.13"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
